# deepMaze

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Dockerfile.prod  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: base_agent.py  dqn_agent.py  drqn_agent.py  dtqn_agent.py  encoders.py  nets.py  ppo_agent.py  q_agent.py  recurrent.py
assets/: README.md
config/: hyperparameters.py
docker/: entrypoint.prod.sh  entrypoint.sh  nginx.conf.template  substitute-config.sh  sync_assets.py
docs/: architecture.md  deployment-guide.md  observability.md
environment/: cells.py  maze.py  render.py
flows/: README.md  bundle_schema.py  prefect.yaml  promote_flow.py  retrain_flow.py  smoke_test_flow.py
infra/: README.md
notebooks/: README.md  train_agent.ipynb
runpod/: Dockerfile  README.md  entrypoint.sh  program.md
scripts/: setup-gh-secrets.sh  train_gce.sh  train_runpod.py  train_vertex.sh
tests/: conftest.py  test_bundle_rebuild.py  test_cnn.py  test_deterministic_eval.py  test_drqn.py  test_env_eval_correctness.py  test_episode_buffer.py  test_epsilon_schedule.py  test_inference.py  test_lava_partial.py  test_maze_gen.py  test_memory_agents.py  test_multi_treasure.py  test_otel_sampler.py  test_periodic_eval.py  test_promote_flow_validate.py  test_repro.py  test_session.py  test_shaping_aux.py  test_smoke.py  test_sync_assets_prefix.py  test_truncation_ppo.py  test_value_hardening.py  test_viz.py  test_web_editor.py
training/: recorders.py  session.py  (+1 more)
(+33 files in other folders)
